[package]
name = "fuzzer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "fs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-channel = "2.3.1"
bytes = "1.5"
rand = "0.8"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.4"
